added demo page: post generator

--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -33,3 +33,7 @@ BlogBundle_show:
         _method:  GET
         id: \d+
 
+######################################################
+BlogBundle_demo:
+    path: /demo
+    defaults: { _controller: BlogBundle:Demo:index }
